# v-engine

./: .clang-format  .clang-tidy  CMakeLists.txt
app/: CMakeLists.txt
app/src/: app.cpp
engine/: CMakeLists.txt
engine/assets/models/: model_donut.mtl
engine/assets/shaders/: sh_basic.frag  sh_basic.vert  sh_default.frag  sh_default.vert
engine/include/core/: asset_database.hpp  core.hpp  log.hpp  renderer.hpp  stb_image.h  tiny_obj_loader.hpp  types.hpp
engine/include/core/renderers/: vulkan_drawable.hpp  vulkan_renderer.hpp
engine/shaders/: basic.frag  basic.vert
engine/shaders/compiled/: basic_vert.spv
engine/src/: asset_database.cpp  core.cpp  stb_image.c  tiny_obj_loader.cpp
engine/src/renderers/: vulkan_renderer.cpp
scripts/: compile_shaders.bat  compile_shaders.sh
tests/: CMakeLists.txt  tests.cpp
